clean && rename && bug fix

--- a/conf/configure.properties
+++ b/conf/configure.properties
@@ -1,11 +1,13 @@
 #db options
-db_host = 192.168.3.122
+db_host = localhost
 db_user = root
-db_password = root@3122
+#db_password = root@3122
+db_password = 
 db_name = db_androidrom
 
-#image options
+#file options
 rom_imagepath = C:/androidrom/images
-rom_imageurl = /androidrom/images
+rom_imageurl = /images
 rom_path = C:/androidrom/roms
-rom_url = /androidrom/roms
+rom_url = /roms
+rom_basepath = /data2/android/rom
