--- a/src/main/java/log4j.properties
+++ b/src/main/java/log4j.properties
@@ -12,8 +12,8 @@ log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%5p %d %C: %m%n
 
-log4j.logger.org.apache.http.impl.conn=DEBUG
-log4j.logger.org.apache.http.impl.client=DEBUG
-log4j.logger.org.apache.http.client=DEBUG
+log4j.logger.org.apache.http.impl.conn=INFO
+log4j.logger.org.apache.http.impl.client=INFO
+log4j.logger.org.apache.http.client=INFO
 
 log4j.logger.java.sql=WARN
