bugs fixed & cron add Signed-off-by: jiangchao1987 <jiangchao1987@gmail.com>

--- a/conf/configure.properties
+++ b/conf/configure.properties
@@ -11,3 +11,6 @@ rom_imageurl = /images
 rom_path = C:/androidrom/roms
 rom_url = /roms
 rom_basepath = /data2/android/rom
+
+#cron options
+cron_rom = 0 0 18 ? * FRI
