--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,11 @@
 			<artifactId>httpclient</artifactId>
 			<version>4.1.3</version>
 		</dependency>
+		<dependency>
+			<groupId>org.quartz-scheduler</groupId>
+			<artifactId>quartz</artifactId>
+			<version>2.1.2</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<defaultGoal>compile</defaultGoal>
