change dao from using jdbc to springJdbc Signed-off-by: jiangchao1987 <jiangchao1987@gmail.com>

--- a/src/main/java/log4j.properties
+++ b/src/main/java/log4j.properties
@@ -1,19 +1,9 @@
-# Rules reminder:
-# DEBUG < INFO < WARN < ERROR < FATAL
-
-# Global logging configuration
-log4j.rootLogger=INFO, stdout
-
-# My logging configuration...
-log4j.logger.org.mybatis.jpetstore=DEBUG
-
-## Console output...
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%5p %d %C: %m%n
+log4j.appender.stdout.layout.ConversionPattern=[%d{HH:mm:ss}][%c][%t:%L][%-5p]%x - [%m]%n
 
-log4j.logger.org.apache.http.impl.conn=INFO
-log4j.logger.org.apache.http.impl.client=INFO
-log4j.logger.org.apache.http.client=INFO
+log4j.rootLogger=INFO,stdout
 
-log4j.logger.java.sql=WARN
+log4j.category.com.candou=DEBUG
+log4j.category.org.springframework=WARN
+log4j.category.com.mchange=WARN
