multi thread download test
Signed-off-by: jiangchao1987 <jiangchao1987@gmail.com>

--- a/conf/configure.properties
+++ b/conf/configure.properties
@@ -1,11 +1,11 @@
 #db options
-db_host = localhost
-db_user = root
+#db_host = 192.168.1.177
+#db_user = root
 #db_password = root@3122
-db_password = 
-db_name = db_androidrom
+#db_password = 
+#db_name = db_androidrom
 
-#file options
+#save options
 rom_imagepath = C:/androidrom/images
 rom_imageurl = /images
 rom_path = C:/androidrom/roms
@@ -13,4 +13,9 @@ rom_url = /roms
 rom_basepath = /data2/android/rom
 
 #cron options
-cron_rom = 0 0 18 ? * FRI
+#cron_rom = 0 0 18 ? * FRI
+cron_rom = 0 33 10 * * ?
+
+#download_options
+download_debug_mode = no
+max_thread_count = 6
