iphone/ipad market pp&&official crawler
Signed-off-by: jiangchao1987 <jiangchao1987@gmail.com>

--- a/conf/configure.properties
+++ b/conf/configure.properties
@@ -1,9 +1,8 @@
 #db options
-#db_host = 192.168.1.177
-#db_user = root
-#db_password = root@3122
-#db_password = 
-#db_name = db_androidrom
+db_host = 192.168.0.177
+db_user = root
+db_password = root@3122
+db_name = db_application
 
 #save options
 rom_imagepath = C:/androidrom/images
