--- a/src/main/java/log4j.properties
+++ b/src/main/java/log4j.properties
@@ -1,6 +1,6 @@
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=[%d{HH:mm:ss}][%c][%t:%L][%-5p]%x - [%m]%n
+log4j.appender.stdout.layout.ConversionPattern=[%d{yyyy-MM-dd HH:mm:ss}][%c][%t:%L][%-5p]%x - [%m]%n
 
 log4j.rootLogger=INFO,stdout
 
