--- a/conf/configure.properties
+++ b/conf/configure.properties
@@ -1,8 +1,8 @@
 #db options
-db_host = 192.168.0.177
+db_host = 192.168.1.177
 db_user = root
 db_password = root@3122
-db_name = db_application
+db_name = db_weixin
 
 #save options
 rom_imagepath = C:/androidrom/images
