--- a/conf/configure.properties
+++ b/conf/configure.properties
@@ -3,6 +3,7 @@ db_host = 192.168.1.177
 db_user = root
 db_password = root@3122
 db_name = db_weixin
+#db_name = db_application
 
 #save options
 rom_imagepath = C:/androidrom/images
