jcwx downloader && bugs fixed.
Signed-off-by: jiangchao1987 <jiangchao1987@gmail.com>

--- a/conf/configure.properties
+++ b/conf/configure.properties
@@ -19,3 +19,7 @@ cron_rom = 0 33 10 * * ?
 #download_options
 download_debug_mode = no
 max_thread_count = 6
+
+#jcwx image save options
+db_path = /image
+save_path = /disk/weixin/jcwx/image
