--- a/conf/configure.properties
+++ b/conf/configure.properties
@@ -22,4 +22,5 @@ max_thread_count = 6
 
 #jcwx image save options
 db_path = /image
-save_path = /disk/weixin/jcwx/image
+#save_path = /disk/weixin/jcwx/image
+save_path = F:/image
