大改版   to JiangChao

--- a/conf/configure.properties
+++ b/conf/configure.properties
@@ -1,8 +1,8 @@
 #db options
-db_host = 192.168.0.177
+db_host = 192.168.1.177
 db_user = root
 db_password = root@3122
-db_name = db_application
+db_name = db_weixin
 
 #save options
 rom_imagepath = C:/androidrom/images
@@ -18,3 +18,12 @@ cron_rom = 0 33 10 * * ?
 #download_options
 download_debug_mode = no
 max_thread_count = 6
+
+#wxzdh image save options
+photo_db_path = /photo
+icon_db_path = /icon
+imc_db_path = /imc
+#save_path = /disk/weixin/jcwx/image
+photo_save_path = F:/photo
+icon_save_path = F:/icon
+imc_save_path = F:/imc
