--- a/pom.xml
+++ b/pom.xml
@@ -67,10 +67,22 @@
 			<version>3.1.2.RELEASE</version>
 		</dependency>
 		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>2.6</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.mongodb</groupId>
 			<artifactId>mongo-java-driver</artifactId>
 			<version>2.7.1</version>
 		</dependency>
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.4.7</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
 			<artifactId>jackson-jaxrs</artifactId>
@@ -81,6 +93,7 @@
 			<artifactId>json</artifactId>
 			<version>20090211</version>
 		</dependency>
+
 	</dependencies>
 	<build>
 		<defaultGoal>compile</defaultGoal>
